--- a/index.html
+++ b/index.html
@@ -1,21 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biker Zone</title>
-    <!-- TailwindCss & DaisyUI -->
+    <!-- TailwindCss & DaisyUI cdn-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Google fonts poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
+    <!-- tailwind custom styles -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'primary-color': '#E76F51',
+                        'slider-bg': 'rgba(231, 111, 81, 0.10)',
+                    }
+                }
+            }
+        }
+    </script>
+    <!-- custom styles -->
+    <style>
+        .font-poppins {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
+
 </head>
 
-<body>
-    <header>
-        <h1>lorem</h1>
-        <h2>lorem</h2>
+<body class="font-poppins">
+    <header class="md:container md:mx-auto">
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="flex-1">
+                    <div class="dropdown">
+                        <label tabindex="0" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </label>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-base">
+                            <li><a>Home</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>News</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost normal-case text-4xl">Biker Zone</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1  text-base">
+                        <li><a>Home</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>News</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                </div>
+                <div class="">
+                    <a class="btn bg-primary-color text-white">login</a>
+                </div>
+            </div>
+        </nav>
+        <!-- Carousel or slider -->
+        <div class="carousel w-full bg-slider-bg md:h-[550px]">
+            <div id="slide1" class="carousel-item relative w-full">
+                <div class="md:flex p-4 md:p-24">
+                    <div class="flex-1 space-y-7 g-20 text-center md:text-start">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4
+                            <br>
+                            with Smile
+                        </h1>
+                        <p>Amet minim mollit non deserunt ullamco
+                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1 flex justify-center">
+                        <img src="/images/slider/bike1.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="md:flex p-4 md:p-24">
+                    <div class="flex-1 space-y-7 g-20 text-center md:text-start">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4
+                            <br>
+                            with Smile
+                        </h1>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1 flex justify-center">
+                        <img src="/images/slider/bike2.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+            <div class="md:flex p-4 md:p-24">
+                <div class="flex-1 space-y-7 g-20 text-center md:text-start">
+                    <h1 class="text-6xl font-bold">Ride-on R15 V4
+                        <br>
+                        with Smile
+                    </h1>
+                    <p>Amet minim mollit non deserunt ullamco
+                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <button class="btn bg-primary-color text-white">Purchase</button>
+                </div>
+                <div class="flex-1 flex justify-center">
+                    <img src="/images/slider/bike3.png" class="w-[400px]" />
+                </div>
+            </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+            <div class="md:flex p-4 md:p-24">
+                <div class="flex-1 space-y-7 g-20 text-center md:text-start">
+                    <h1 class="text-6xl font-bold">Ride-on R15 V4
+                        <br>
+                        with Smile
+                    </h1>
+                    <p>Amet minim mollit non deserunt ullamco
+                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <button class="btn bg-primary-color text-white">Purchase</button>
+                </div>
+                <div class="flex-1 flex justify-center">
+                    <img src="/images/slider/bike4.png" class="w-[400px]" />
+                </div>
+            </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
     </header>
+    <main class="md:container md:mx-auto">
+        <section class="py-24">
+            <div class="section-header text-center space-y-2 pb-12">
+                <h2 class="text-6xl font-bold ">Fetured Bikes In This Year</h2>
+                <p class="text-primary-color">Best bike collection</p>
+            </div>
+            <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-10">
+                <div class="item flex justify-center  md:justify-normal">
+                    <img src="images/others/feature-bike.png" alt="">
+                </div>
+                <div class="item flex justify-center  md:justify-normal">
+                    <img src="images/others/feature-bike.png" alt="">
+                </div>
+                <div class="item flex justify-center md:justify-normal">
+                    <img src="images/others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
