slider image path change

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <button class="btn bg-primary-color text-white">Purchase</button>
                     </div>
                     <div class="flex-1 flex justify-center">
-                        <img src="/images/slider/bike1.png" class="w-[400px]" />
+                        <img src="images/slider/bike1.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -108,7 +108,7 @@
                         <button class="btn bg-primary-color text-white">Purchase</button>
                     </div>
                     <div class="flex-1 flex justify-center">
-                        <img src="/images/slider/bike2.png" class="w-[400px]" />
+                        <img src="images/slider/bike2.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -128,7 +128,7 @@
                     <button class="btn bg-primary-color text-white">Purchase</button>
                 </div>
                 <div class="flex-1 flex justify-center">
-                    <img src="/images/slider/bike3.png" class="w-[400px]" />
+                    <img src="images/slider/bike3.png" class="w-[400px]" />
                 </div>
             </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -148,7 +148,7 @@
                     <button class="btn bg-primary-color text-white">Purchase</button>
                 </div>
                 <div class="flex-1 flex justify-center">
-                    <img src="/images/slider/bike4.png" class="w-[400px]" />
+                    <img src="images/slider/bike4.png" class="w-[400px]" />
                 </div>
             </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
