--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             with Smile
                         </h1>
                         <p>Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                         <button class="btn bg-primary-color text-white">Purchase</button>
                     </div>
                     <div class="flex-1 flex justify-center">
@@ -117,40 +117,40 @@
                 </div>
             </div>
             <div id="slide3" class="carousel-item relative w-full">
-            <div class="md:flex p-4 md:p-24">
-                <div class="flex-1 space-y-7 g-20 text-center md:text-start">
-                    <h1 class="text-6xl font-bold">Ride-on R15 V4
-                        <br>
-                        with Smile
-                    </h1>
-                    <p>Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                    <button class="btn bg-primary-color text-white">Purchase</button>
+                <div class="md:flex p-4 md:p-24">
+                    <div class="flex-1 space-y-7 g-20 text-center md:text-start">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4
+                            <br>
+                            with Smile
+                        </h1>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1 flex justify-center">
+                        <img src="images/slider/bike3.png" class="w-[400px]" />
+                    </div>
                 </div>
-                <div class="flex-1 flex justify-center">
-                    <img src="images/slider/bike3.png" class="w-[400px]" />
-                </div>
-            </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a>
                     <a href="#slide4" class="btn btn-circle">❯</a>
                 </div>
             </div>
             <div id="slide4" class="carousel-item relative w-full">
-            <div class="md:flex p-4 md:p-24">
-                <div class="flex-1 space-y-7 g-20 text-center md:text-start">
-                    <h1 class="text-6xl font-bold">Ride-on R15 V4
-                        <br>
-                        with Smile
-                    </h1>
-                    <p>Amet minim mollit non deserunt ullamco
-                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-                    <button class="btn bg-primary-color text-white">Purchase</button>
+                <div class="md:flex p-4 md:p-24">
+                    <div class="flex-1 space-y-7 g-20 text-center md:text-start">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4
+                            <br>
+                            with Smile
+                        </h1>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-primary-color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1 flex justify-center">
+                        <img src="images/slider/bike4.png" class="w-[400px]" />
+                    </div>
                 </div>
-                <div class="flex-1 flex justify-center">
-                    <img src="images/slider/bike4.png" class="w-[400px]" />
-                </div>
-            </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a>
                     <a href="#slide1" class="btn btn-circle">❯</a>
@@ -158,7 +158,8 @@
             </div>
         </div>
     </header>
-    <main class="md:container md:mx-auto">
+    <main class="md:container md:mx-auto px-4">
+        <!-- Featured bike section start -->
         <section class="py-24">
             <div class="section-header text-center space-y-2 pb-12">
                 <h2 class="text-6xl font-bold ">Fetured Bikes In This Year</h2>
@@ -176,7 +177,203 @@
                 </div>
             </div>
         </section>
+        <!-- Featured bike section end -->
+
+        <!-- Latest news section start -->
+        <section class="py-24">
+            <div class="section-header text-center mb-12">
+                <h2 class="text-6xl font-bold ">latest News</h2>
+            </div>
+            <div class="grid gap-5 sm:grid-cols-2 md:grid-cols-3">
+                <div class="blog-box shadow rounded p-5 text-center sm:text-start">
+                    <a class="flex justify-center sm:justify-normal" href=""><img src="images/others/latest1.png"
+                            alt=""></a>
+                    <h3 class="mt-10 mb-2 text-3xl font-semibold">Ducati XDIAVEL S-73</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                    <button
+                        class="btn bg-white border-[1px] border-primary-color hover:bg-primary-color hover:text-gray-900 text-primary-color mt-12">Read
+                        More</button>
+                </div>
+                <div class="blog-box shadow rounded p-5 text-center sm:text-start">
+                    <a class="flex justify-center sm:justify-normal" href=""><img src="images/others/latest1.png"
+                            alt=""></a>
+                    <h3 class="mt-10 mb-2 text-3xl font-semibold">Ducati XDIAVEL S-73</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                    <button
+                        class="btn bg-white border-[1px] border-primary-color hover:bg-primary-color hover:text-gray-900 text-primary-color mt-12">Read
+                        More</button>
+                </div>
+                <div class="blog-box shadow rounded p-5 text-center sm:text-start">
+                    <a class="flex justify-center sm:justify-normal" href=""><img src="images/others/latest1.png"
+                            alt=""></a>
+                    <h3 class="mt-10 mb-2 text-3xl font-semibold">Ducati XDIAVEL S-73</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                    <button
+                        class="btn bg-white border-[1px] border-primary-color hover:bg-primary-color hover:text-gray-900 text-primary-color mt-12">Read
+                        More</button>
+                </div>
+
+            </div>
+        </section>
+        <!-- Latest news section start -->
+        <!-- Testimonial section start -->
+        <section class="py-24">
+            <div class="section-header text-center mb-12">
+                <h2 class="text-6xl font-bold ">Happy <span class="text-primary-color">Clients says</span></h2>
+            </div>
+            <div class="grid gap-11 sm:grid-cols-2 md:grid-cols-3">
+                <!-- review -->
+                <div class="item rounded text-center space-y-4 p-8 border-[1px] borer-[#DEDEDE]">
+                    <img class="w-36 mx-auto" src="images/others/user-1.png" alt="">
+                    <p>
+                        Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.
+                    </p>
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <h6 class="text-[#23A6F0] font-semibold">Regina Miles</h6>
+                    <h6 class="font-semibold">Banker</h6>
+                </div>
+                <!-- review -->
+                <div class="item rounded text-center space-y-4 p-8 border-[1px] borer-[#DEDEDE]">
+                    <img class="w-36 mx-auto" src="images/others/user-2.png" alt="">
+                    <p>
+                        Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.
+                    </p>
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <h6 class="text-[#23A6F0] font-semibold">Regina Miles</h6>
+                    <h6 class="font-semibold">Banker</h6>
+                </div>
+                <!-- review -->
+                <div class="item rounded text-center space-y-4 p-8 border-[1px] borer-[#DEDEDE]">
+                    <img class="w-36 mx-auto" src="images/others/user-3.png" alt="">
+                    <p>
+                        Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.
+                    </p>
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <h6 class="text-[#23A6F0] font-semibold">Regina Miles</h6>
+                    <h6 class="font-semibold">Banker</h6>
+                </div>
+            </div>
+        </section>
+        <!-- Testimonial section end -->
+        <!-- Faqs section start -->
+        <section class="py-24">
+            <div class="section-header text-center mb-12">
+                <h2 class="text-6xl font-semibold">Frequently Asked <span class="text-primary-color">Questions</span>
+                </h2>
+            </div>
+            <div class="md:flex gap-24">
+                <div class="flex-1">
+                    <img src="images/others/faq.png" alt="">
+                </div>
+                <div class="flex-1 space-y-6">
+                    <div class="collapse collapse-arrow border-[1px] border-[#D5E5FB] rounded ">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">
+                            What are the most important things I should
+                            know about riding a bike?
+                        </div>
+                        <div class="collapse-content">
+                            <p>
+                                Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                laws. Get in the mindset of
+                                “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                                and legally compliant bike rider.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow border-[1px] border-[#D5E5FB] rounded ">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">
+                            How can I tell if my helmet is old and I need a
+                            new one?
+                        </div>
+                        <div class="collapse-content">
+                            <p>
+                                Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                laws. Get in the mindset of
+                                “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                                and legally compliant bike rider.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow border-[1px] border-[#D5E5FB] rounded ">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">
+                            My bike has been in storage is it safe to ride? </div>
+                        <div class="collapse-content">
+                            <p>
+                                Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                laws. Get in the mindset of
+                                “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                                and legally compliant bike rider.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Faqs section end -->
     </main>
+    <footer class="bg-[#0B0D17]">
+        <div class="md:container md:mx-auto px-4 py-24 text-white md:flex justify-between">
+            <div class="">
+                <div class="flex flex-wrap gap-6 mb-4">
+                    <a href="">Download Now</a>
+                    <a href="">License</a>
+                </div>
+                <div class="flex flex-wrap gap-6 mb-6">
+                    <a href="">About</a>
+                    <a href="">Features</a>
+                    <a href="">Pricing</a>
+                    <a href="">Careers</a>
+                    <a href="">Help</a>
+                    <a href="">Privacy Policy</a>
+                </div>
+                <p>© 2020 bike. All rights reserved</p>
+            </div>
+
+            <div class="gap-4 grid">
+                <h5 class="text-lg font-medium">Get the App</h5>
+                <a href="">
+                    <img src="images/others/ios.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/others/android.png" alt="">
+                </a>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
